# webrtc-client-rust

./: Cargo.toml  LICENSE  README.md  rtc.rs
cap/: Cargo.toml
cap/src/: audio.rs  capturer.rs  decoder.rs  error.rs  h264.rs  lib.rs  sharable.rs  utils.rs  video.rs
cap/src/capturer/: config.rs
platform_utils/: Cargo.toml  build.rs
platform_utils/src/: lib.rs
platform_utils/src/macos/: idle_time.rs  mod.rs  version.rs
renderer/screen/: cmds.rs  mod.rs  renderer.rs  utils.rs
rtc/: Cargo.toml  audio.rs  audio_decoder.rs  audio_input.rs  capturer.rs  commands.rs  echo_cancel.rs  engine.rs  error.rs  jitter.rs  peer2.rs  peer_queue.rs  peer_state.rs  player.rs  processor.rs  remote_control.rs  resampler.rs  sdp.rs  signal.rs  utils.rs
rtc/ice/: conn.rs  gatherer.rs  mod.rs  utils.rs
rtc/net/: bytes_pool.rs  mod.rs
rtc/peer/: channel.rs
rtc/peer2/: utils.rs
tauri_commands/: devices_list.rs  sound_status.rs  sound_tools.rs
video/: Cargo.toml  build.rs
video/src/: lib.rs  vpx.rs  vpxcodec.rs
