[workspace]
members = [
  "rtc",
  "video",
  "compressor",
  "cap",
  "platform_utils"
]
resolver = "2"
rust-version = "1.75"
edition = "2021"

[workspace.package]
edition = "2021"
authors = ["Noor Chat"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
serde_json = "1"
thiserror = "1"
url = "2"

[profile.dev]
# Make compilation faster on macOS
split-debuginfo = "unpacked"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Set the default for dependencies, except workspace members.
[profile.dev.package."*"]
opt-level = 3
incremental = false

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true
opt-level = "s"
strip = true      # Remove debug symbols

# Optimize for speed 
[profile.release.package.webrtc-audio-processing]
opt-level = 3

[profile.release.package.str0m]
opt-level = 3

[profile.release.package.cap]
opt-level = 3

[profile.release.package.cpal]
opt-level = 3
