[package]
name = "platform_utils"
version = "0.1.0"
edition = "2021"
bitcode = true

[lib]
# or [bin]
crate-type = ["rlib", "cdylib"]

[dependencies]
core-graphics = { version = "0.23" }

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"
cocoa = "0.25"
objc-foundation = "0.1"
objc_id = "0.1"
core-foundation = "0.9.4"
